syntax = "proto3";

package model.model.v1alpha;

// Google API
import "google/api/annotations.proto";
import "google/api/client.proto";
import "google/api/visibility.proto";
// Model definitions
import "../../../model/model/v1alpha/model.proto";
import "../../../model/model/v1alpha/model_definition.proto";
// OpenAPI definition
import "protoc-gen-openapiv2/options/annotations.proto";

// Model
//
// ModelPublicService exposes the public endpoints that allow clients to manage
// models.
service ModelPublicService {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_tag) = {description: "Public Model endpoints"};

  // Check if the model server is alive
  //
  // See https://github.com/grpc/grpc/blob/master/doc/health-checking.md.
  rpc Liveness(LivenessRequest) returns (LivenessResponse) {
    option (google.api.http) = {
      get: "/v1alpha/__liveness"
      additional_bindings: [
        {get: "/v1alpha/health/model"}]
    };
    option (google.api.method_visibility).restriction = "INTERNAL";
  }

  // Check if the model server is ready
  //
  // See https://github.com/grpc/grpc/blob/master/doc/health-checking.md
  rpc Readiness(ReadinessRequest) returns (ReadinessResponse) {
    option (google.api.http) = {
      get: "/v1alpha/__readiness"
      additional_bindings: [
        {get: "/v1alpha/ready/model"}]
    };
    option (google.api.method_visibility).restriction = "INTERNAL";
  }

  // List model definitions
  //
  // Returns a paginated list of model definitions.
  rpc ListModelDefinitions(ListModelDefinitionsRequest) returns (ListModelDefinitionsResponse) {
    option (google.api.http) = {get: "/v1alpha/model-definitions"};
  }

  // Get a model definition
  //
  // Returns the details of a model definition.
  rpc GetModelDefinition(GetModelDefinitionRequest) returns (GetModelDefinitionResponse) {
    option (google.api.http) = {get: "/v1alpha/{name=model-definitions/*}"};
    option (google.api.method_signature) = "name";
  }

  // List models
  //
  // Returns a paginated list of models.
  rpc ListModels(ListModelsRequest) returns (ListModelsResponse) {
    option (google.api.http) = {get: "/v1alpha/models"};
  }

  // Get a model by UID
  //
  // Returns the details of a model by a permalink defined by the resource UID.
  rpc LookUpModel(LookUpModelRequest) returns (LookUpModelResponse) {
    option (google.api.http) = {get: "/v1alpha/{permalink=models/*}/lookUp"};
    option (google.api.method_signature) = "permalink";
  }

  // List user models
  //
  // Returns a paginated list of models that belong to the specified user. The
  // parent user may be different from the authenticated user, in which case
  // the results will contain the models that are visible to the latter.
  rpc ListUserModels(ListUserModelsRequest) returns (ListUserModelsResponse) {
    option (google.api.http) = {get: "/v1alpha/{parent=users/*}/models"};
    option (google.api.method_signature) = "parent";
  }

  // Create a new model
  //
  // Creates a new model under the parenthood of a user. This is an
  // asynchronous endpoint, i.e., the server will not wait for the model to be
  // created in order to respond. Instead, it will return a response with the
  // necessary information to access the result and status of the creation
  // operation.
  rpc CreateUserModel(CreateUserModelRequest) returns (CreateUserModelResponse) {
    option (google.api.http) = {
      post: "/v1alpha/{parent=users/*}/models"
      body: "model"
    };
    option (google.api.method_signature) = "parent,model";
  }

  // Get a model
  //
  // Returns the detail of a model, accessing it by the model ID and its parent user.
  rpc GetUserModel(GetUserModelRequest) returns (GetUserModelResponse) {
    option (google.api.http) = {get: "/v1alpha/{name=users/*/models/*}"};
    option (google.api.method_signature) = "name";
  }

  // Update a model
  //
  // Updates a model, accessing it by its resource name, which is defined by
  // the parent user and the ID of the model.
  //
  // In REST requests, only the supplied model fields will be taken into
  // account when updating the resource.
  rpc UpdateUserModel(UpdateUserModelRequest) returns (UpdateUserModelResponse) {
    option (google.api.http) = {
      patch: "/v1alpha/{model.name=users/*/models/*}"
      body: "model"
    };
    option (google.api.method_signature) = "model,update_mask";
  }

  // Delete a model
  //
  // Deletes a model, accesing it by its resource name, which is defined by the
  // parent user and the ID of the model.
  rpc DeleteUserModel(DeleteUserModelRequest) returns (DeleteUserModelResponse) {
    option (google.api.http) = {delete: "/v1alpha/{name=users/*/models/*}"};
    option (google.api.method_signature) = "name";
  }

  // Rename a model
  //
  // Renames a model, accesing it by its resource name, which is defined by the
  // parent user and the ID of the model.
  rpc RenameUserModel(RenameUserModelRequest) returns (RenameUserModelResponse) {
    option (google.api.http) = {
      post: "/v1alpha/{name=users/*/models/*}/rename"
      body: "*"
    };
    option (google.api.method_signature) = "name,new_model_id";
  }

  // Publish a model
  //
  // Updates the visibility in a model to PUBLIC. The model is accessed by its
  // resource name, defined by the model ID and its parent user.
  rpc PublishUserModel(PublishUserModelRequest) returns (PublishUserModelResponse) {
    option (google.api.http) = {
      post: "/v1alpha/{name=users/*/models/*}/publish"
      body: "*"
    };
    option (google.api.method_signature) = "name";
  }

  // Unpublish a model
  //
  // Updates the visibility in a model to PRIVATE. The model is accessed by its
  // resource name, defined by the model ID and its parent user.
  rpc UnpublishUserModel(UnpublishUserModelRequest) returns (UnpublishUserModelResponse) {
    option (google.api.http) = {
      post: "/v1alpha/{name=users/*/models/*}/unpublish"
      body: "*"
    };
    option (google.api.method_signature) = "name";
  }

  // Get a model card
  //
  // Returns the README file that accompanies a model, describing it and
  // enhancing it with metadata. The model is accessed by its resource name.
  rpc GetUserModelCard(GetUserModelCardRequest) returns (GetUserModelCardResponse) {
    option (google.api.http) = {get: "/v1alpha/{name=users/*/models/*/readme}"};
    option (google.api.method_signature) = "name";
  }

  // Watch the state of a model
  //
  // Returns the state of a model. The deploy / undeploy actions take some
  // time, during which a model will be in an UNSPECIFIED state. This endpoint
  // allows clients to track the state and progress of the model.
  rpc WatchUserModel(WatchUserModelRequest) returns (WatchUserModelResponse) {
    option (google.api.http) = {get: "/v1alpha/{name=users/*/models/*}/{version=*}/watch"};
    option (google.api.method_signature) = "name";
  }

  ///////////////////////////////////////////////////////

  // Trigger model inference
  //
  // Triggers a deployed model to infer the result of a set of task or
  // questions.
  rpc TriggerUserModel(TriggerUserModelRequest) returns (TriggerUserModelResponse) {
    option (google.api.http) = {
      post: "/v1alpha/{name=users/*/models/*}/{version=*}/trigger"
      body: "*"
    };
    option (google.api.method_signature) = "name,inputs";
  }

  // Trigger model inference asynchronously
  //
  // Triggers a deployed model to infer the result of a set of task or
  // questions.
  rpc TriggerAsyncUserModel(TriggerAsyncUserModelRequest) returns (TriggerAsyncUserModelResponse) {
    option (google.api.http) = {
      post: "/v1alpha/{name=users/*/models/*}/{version=*}/triggerAsync"
      body: "*"
    };
    option (google.api.method_signature) = "name,inputs";
  }

  // Trigger model inference with a binary input
  //
  // Triggers a deployed model to infer the result of a task or question,
  // submitted as a binary file.
  rpc TriggerUserModelBinaryFileUpload(stream TriggerUserModelBinaryFileUploadRequest) returns (TriggerUserModelBinaryFileUploadResponse) {
    option (google.api.method_signature) = "name,file";
  }

  // List organization models
  //
  // Returns a paginated list of models that belong to the specified organization. The
  // parent organization may be different from the authenticated organization, in which case
  // the results will contain the models that are visible to the latter.
  rpc ListOrganizationModels(ListOrganizationModelsRequest) returns (ListOrganizationModelsResponse) {
    option (google.api.http) = {get: "/v1alpha/{parent=organizations/*}/models"};
    option (google.api.method_signature) = "parent";
  }

  // Create a new model
  //
  // Creates a new model under the parenthood of an organization. This is an
  // asynchronous endpoint, i.e., the server will not wait for the model to be
  // created in order to respond. Instead, it will return a response with the
  // necessary information to access the result and status of the creation
  // operation.
  rpc CreateOrganizationModel(CreateOrganizationModelRequest) returns (CreateOrganizationModelResponse) {
    option (google.api.http) = {
      post: "/v1alpha/{parent=organizations/*}/models"
      body: "model"
    };
    option (google.api.method_signature) = "parent,model";
  }

  // Get a model
  //
  // Returns the detail of a model, accessing it by the model ID and its parent organization.
  rpc GetOrganizationModel(GetOrganizationModelRequest) returns (GetOrganizationModelResponse) {
    option (google.api.http) = {get: "/v1alpha/{name=organizations/*/models/*}"};
    option (google.api.method_signature) = "name";
  }

  // Update a model
  //
  // Updates a model, accessing it by its resource name, which is defined by
  // the parent organization and the ID of the model.
  //
  // In REST requests, only the supplied model fields will be taken into
  // account when updating the resource.
  rpc UpdateOrganizationModel(UpdateOrganizationModelRequest) returns (UpdateOrganizationModelResponse) {
    option (google.api.http) = {
      patch: "/v1alpha/{model.name=organizations/*/models/*}"
      body: "model"
    };
    option (google.api.method_signature) = "model,update_mask";
  }

  // Delete a model
  //
  // Deletes a model, accesing it by its resource name, which is defined by the
  // parent organization and the ID of the model.
  rpc DeleteOrganizationModel(DeleteOrganizationModelRequest) returns (DeleteOrganizationModelResponse) {
    option (google.api.http) = {delete: "/v1alpha/{name=organizations/*/models/*}"};
    option (google.api.method_signature) = "name";
  }

  // Rename a model
  //
  // Renames a model, accesing it by its resource name, which is defined by the
  // parent organization and the ID of the model.
  rpc RenameOrganizationModel(RenameOrganizationModelRequest) returns (RenameOrganizationModelResponse) {
    option (google.api.http) = {
      post: "/v1alpha/{name=organizations/*/models/*}/rename"
      body: "*"
    };
    option (google.api.method_signature) = "name,new_model_id";
  }

  // Publish a model
  //
  // Updates the visibility in a model to PUBLIC. The model is accessed by its
  // resource name, defined by the model ID and its parent organization.
  rpc PublishOrganizationModel(PublishOrganizationModelRequest) returns (PublishOrganizationModelResponse) {
    option (google.api.http) = {
      post: "/v1alpha/{name=organizations/*/models/*}/publish"
      body: "*"
    };
    option (google.api.method_signature) = "name";
  }

  // Unpublish a model
  //
  // Updates the visibility in a model to PRIVATE. The model is accessed by its
  // resource name, defined by the model ID and its parent organization.
  rpc UnpublishOrganizationModel(UnpublishOrganizationModelRequest) returns (UnpublishOrganizationModelResponse) {
    option (google.api.http) = {
      post: "/v1alpha/{name=organizations/*/models/*}/unpublish"
      body: "*"
    };
    option (google.api.method_signature) = "name";
  }

  // Get a model card
  //
  // Returns the README file that accompanies a model, describing it and
  // enhancing it with metadata. The model is accessed by its resource name.
  rpc GetOrganizationModelCard(GetOrganizationModelCardRequest) returns (GetOrganizationModelCardResponse) {
    option (google.api.http) = {get: "/v1alpha/{name=organizations/*/models/*/readme}"};
    option (google.api.method_signature) = "name";
  }

  // Watch the state of a model
  //
  // Returns the state of a model. The deploy / undeploy actions take some
  // time, during which a model will be in an UNSPECIFIED state. This endpoint
  // allows clients to track the state and progress of the model.
  rpc WatchOrganizationModel(WatchOrganizationModelRequest) returns (WatchOrganizationModelResponse) {
    option (google.api.http) = {get: "/v1alpha/{name=organizations/*/models/*}/{version=*}/watch"};
    option (google.api.method_signature) = "name";
  }

  ///////////////////////////////////////////////////////

  // Trigger model inference
  //
  // Triggers a deployed model to infer the result of a set of task or
  // questions.
  rpc TriggerOrganizationModel(TriggerOrganizationModelRequest) returns (TriggerOrganizationModelResponse) {
    option (google.api.http) = {
      post: "/v1alpha/{name=organizations/*/models/*}/{version=*}/trigger"
      body: "*"
    };
    option (google.api.method_signature) = "name,inputs";
  }

  // Trigger model inference asynchronously
  //
  // Triggers a deployed model to infer the result of a set of task or
  // questions.
  rpc TriggerAsyncOrganizationModel(TriggerAsyncOrganizationModelRequest) returns (TriggerAsyncOrganizationModelResponse) {
    option (google.api.http) = {
      post: "/v1alpha/{name=organizations/*/models/*}/{version=*}/triggerAsync"
      body: "*"
    };
    option (google.api.method_signature) = "name,inputs";
  }

  // Trigger model inference with a binary input
  //
  // Triggers a deployed model to infer the result of a task or question,
  // submitted as a binary file.
  rpc TriggerOrganizationModelBinaryFileUpload(stream TriggerOrganizationModelBinaryFileUploadRequest) returns (TriggerOrganizationModelBinaryFileUploadResponse) {
    option (google.api.method_signature) = "name,file";
  }

  // Get the details of a long-running operation
  //
  // This method allows requesters to request the status and outcome of
  // long-running operations in a model, such as deployment.
  rpc GetModelOperation(GetModelOperationRequest) returns (GetModelOperationResponse) {
    option (google.api.http) = {get: "/v1alpha/{name=operations/*}"};
    option (google.api.method_signature) = "name";
  }
}
